--- a/CTI_Customize/files/config/config.html
+++ b/CTI_Customize/files/config/config.html
@@ -1,6 +1,23 @@
 <!--ルックアップ設定-->
 <div class="block">
     <label class="kintoneplugin-label">
+        <span>検索条件フィールド</span>
+    </label>
+    <br >
+    <div class="kintoneplugin-row">検索条件となるフィールドを選択下さい。このフィールドが絞り込み条件に含まれる際にプログラムが実行されます。
+    <span class="kintoneplugin-require">必須</span>
+    </div>
+    <div class="kintoneplugin-select-outer">
+        <div class="kintoneplugin-select">
+            <select name="search-key" id= "search-key">
+                <option value="">-----</option>
+            </select>
+        </div>
+    </div>
+</div>
+<br >
+<div class="block">
+    <label class="kintoneplugin-label">
         <span>リスト表示時フィールド</span>
     </label>
     <br >
